--- a/src/root/build.tt
+++ b/src/root/build.tt
@@ -55,7 +55,14 @@ END;
                    INCLUDE renderDuration duration = curTime - step.starttime;
                  END %]
             </td>
-            <td>[% IF step.busy != 0 || ((step.machine || step.starttime) && (step.status == 0 || step.status == 1 || step.status == 3 || step.status == 4 || step.status == 7)); INCLUDE renderMachineName machine=step.machine; ELSE; "<em>n/a</em>"; END %]</td>
+            <td>
+              [% IF step.machine.search('hetzner') %]
+                <a href="https://app.datadoghq.com/dash/host_name/[% step.machine %]?from_ts=[% step.starttime*1000 %][% step.stoptime > 0 ? "&to_ts=${step.stoptime}000&live=false": '&live=true' %]">
+              [% END %]
+              [% IF step.busy != 0 || ((step.machine || step.starttime) && (step.status == 0 || step.status == 1 || step.status == 3 || step.status == 4 || step.status == 7));
+              INCLUDE renderMachineName machine=step.machine; ELSE; "<em>n/a</em>"; END %]
+              [% step.machine.search('hetzner') ? '</a>' : '' %]
+            </td>
             <td class="step-status">
               [% IF step.busy != 0 %]
                 [% IF step.busy == 1 %]
